fixed readability issue again

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,7 +94,7 @@ input, select, textarea {
 
 	body {
 		background-color: #2e3141;
-		background-image:linear-gradient(to top, black, transparent),url("../../images/bg.png");
+		background-image:linear-gradient(to top, transparent, black ,transparent),url("../../images/bg.png");
 		background-attachment: fixed, fixed;
 		background-position: center, center;
 	}
@@ -3423,8 +3423,9 @@ input, select, textarea {
 			#banner {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #2e3141;
-				background-image:linear-gradient(to top, black, transparent),url("../../images/bg.png");
+				background-image:linear-gradient(to top, transparent, black ,transparent),url("../../images/bg.png");
 				background-position: center, center;
+				background-attachment: fixed, fixed;
 				margin-bottom: -6.5em;
 			}
 
@@ -3533,6 +3534,7 @@ input, select, textarea {
 			padding: 9em 0 6.25em 0 ;
 			background-color: #2e3141;
 			background-image:linear-gradient(to top, black, transparent),url("../../images/bg.png");
+			background-attachment: fixed, fixed;
 			background-position: center, 0% 30%;
 			margin-bottom: -6.5em;
 		}
@@ -4019,7 +4021,8 @@ input, select, textarea {
 
 		#footer {
 			background-color: #2e3141;
-			background-image:linear-gradient(to top, black, transparent),url("../../images/bg.png");
+			background-image:linear-gradient(to top, transparent, black ,transparent),url("../../images/bg.png");
+			background-attachment: fixed, fixed;
 			background-position: center, center;
 			margin-top: -6.5em;
 			padding-top: 6.5em;
